# C-calculator

./: CMakeCache.txt  CMakeLists.txt  Makefile  NOTES.md  README.md  cmake_install.cmake  makefile
include/: calculator.h
src/: calculator.c  main.c
